0.7.1 (currently working on)
- [#2592] Fix: Fix a few typos in the unit tests
- [#1716] Fix: Make the CSV export work with multiline cells in Excel and OpenOffice.org
- [#2579] Fix: The user fields for export should be chosen from fe_user not tx_seminars_attendances
- [#2596] Fix: Use mb_strlen instead of strlen
- [#2503] Change: Add some unit tests
- [#2593] Change: Add some unit tests for the "my events" list
- [#2617] Fix: Some headings in the "my events" list are moved up
- [#2616] Fix: Invalid HTML in the list view
- [#2548] Fix: The owner image on the single view page should use the path that is configured in the sr_feuser_register EM settings
- [#2563] Fix: Deal with deleted FE users and seminars gracefully
- [#2458] Fix: Expect false for a failed $dbResult, not null
- [#1611] Change: Add guard clauses to objectfromdb::createMmRecords
- [#2541] Fix: Save memory by destructing the bags after usage in the tests and the production code
- [#2576] Fix: Function limitToSeatsEqualOrLessThanVacancies() is missing in registrationBagBuilder
- [#1965] Fix: No gender in the CSV export of registrations
- [#1597] Change: Use the oelib mailer class for sending e-mails
- [#2500] Fix: The class pi1_frontEndRequirementsList does not load detailPID from flexforms
- [#2485] Cleanup: The seminarchild constructor should have a default value for the configuration

0.7.0 (released 2009-01-04)
- [#2294] Change: Hide the partner integration and the new prices in the 0.7.x branch before the release
- [#2520] Fix: Times are deleted when saving an event in the FE editor
- [#2519] Fix: Thank-you e-mail has a surplus colon for events without an event type
- [#2517] Fix: The category icon in the list view should have no link border
- [#2508] Fix: Category column just shows "Array" on list view other than "seminars_list"
- [#2456] Feature: Add lazy loading for models
- [#2019] Change: Change the labels "Multiple event topic|date" in locallang_db.xml